Revert "raumfeld: fix names of locales to generate"
This change had no effect at all and did not solve RFS-3786.

This reverts commit d5a67d628f79af55be9904f78b27dc6635e72a46.

--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -170,7 +170,7 @@ BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C de en nl"
-BR2_GENERATE_LOCALE="en_US.UTF-8 de_DE.UTF-8 nl_NL.UTF-8"
+BR2_GENERATE_LOCALE="en_US de_DE nl_NL"
 BR2_NEEDS_GETTEXT=y
 BR2_NEEDS_GETTEXT_IF_LOCALE=y
 BR2_USE_MMU=y
