raumfeld: no option necessary any more

--- a/raumfeld/rootfs-geode/etc/master-process/master-process-apps.conf
+++ b/raumfeld/rootfs-geode/etc/master-process/master-process-apps.conf
@@ -24,7 +24,7 @@ WEBSERVICE=load
 
 [TIMESERVER]
 workingdir=../timeserver
-call=../timeserver/timeserver -d -5
+call=../timeserver/timeserver
 restart=yes
 
 [CONFIGSERVICE]
