--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00055-g25357af-dirty Configuration
+# Buildroot 2013.05-00080-gd926973-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -167,6 +167,7 @@ BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_TOOLCHAIN_HAS_THREADS=y
+BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C de en nl"
@@ -195,7 +196,7 @@ BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
 BR2_PTHREADS_NATIVE=y
-# BR2_PTHREAD_DEBUG is not set
+BR2_PTHREAD_DEBUG=y
 # BR2_ELF2FLT is not set
 
 #
@@ -295,10 +296,9 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_DHRYSTONE is not set
 # BR2_PACKAGE_DSTAT is not set
 # BR2_PACKAGE_DMALLOC is not set
-
-#
-# gdb/gdbserver require a toolchain with thread and thread debug support
-#
+BR2_PACKAGE_GDB=y
+BR2_PACKAGE_GDB_SERVER=y
+# BR2_PACKAGE_GDB_DEBUGGER is not set
 # BR2_PACKAGE_IOZONE is not set
 BR2_PACKAGE_KEXEC=y
 BR2_PACKAGE_KEXEC_ZLIB=y
