raumfeld: enable syslog support for wpa_supplicant

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00080-gd926973-dirty Configuration
+# Buildroot 2013.05-03643-gb313bfd-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1388,6 +1388,7 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 # BR2_PACKAGE_WPA_SUPPLICANT_DBUS_OLD is not set
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW=y
 BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
+BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 # BR2_PACKAGE_WVDIAL is not set
 # BR2_PACKAGE_XINETD is not set
