--- a/raumfeld/br2-imgrootfs-arm.config
+++ b/raumfeld/br2-imgrootfs-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00055-g25357af-dirty Configuration
+# Buildroot 2013.05-03643-gb313bfd-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1287,6 +1287,7 @@ BR2_PACKAGE_WPA_SUPPLICANT=y
 # BR2_PACKAGE_WPA_SUPPLICANT_CLI is not set
 # BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE is not set
 # BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG is not set
 # BR2_PACKAGE_WPA_SUPPLICANT_WPS is not set
 
 #
