--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-03643-gb313bfd-dirty Configuration
+# Buildroot 2013.05-00009-g7942095 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1261,8 +1261,8 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
 # BR2_LINUX_KERNEL_CUSTOM_GIT is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.10.10"
-BR2_LINUX_KERNEL_VERSION="3.10.10"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.10.15"
+BR2_LINUX_KERNEL_VERSION="3.10.15"
 BR2_LINUX_KERNEL_PATCH="raumfeld/kernel-geode.patch"
 BR2_LINUX_KERNEL_FIRMWARE=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
