raumfeld: enable alsamixer on the Armada platform
We have enough space on our file-system on the new hardware. So
waste some of it and install alsamixer for easier development.

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-03643-gb313bfd-dirty Configuration
+# Buildroot 2013.05-00038-gd099d25 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -259,7 +259,7 @@ BR2_PACKAGE_ALSA_UTILS=y
 #
 # BR2_PACKAGE_ALSA_UTILS_ALSACONF is not set
 BR2_PACKAGE_ALSA_UTILS_ALSACTL=y
-# BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
+BR2_PACKAGE_ALSA_UTILS_ALSAMIXER=y
 # BR2_PACKAGE_ALSA_UTILS_AMIDI is not set
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
@@ -1146,9 +1146,9 @@ BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_LIBICONV is not set
 # BR2_PACKAGE_LINENOISE is not set
 BR2_PACKAGE_NCURSES=y
-# BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
-# BR2_PACKAGE_NCURSES_TARGET_FORM is not set
-# BR2_PACKAGE_NCURSES_TARGET_MENU is not set
+BR2_PACKAGE_NCURSES_TARGET_PANEL=y
+BR2_PACKAGE_NCURSES_TARGET_FORM=y
+BR2_PACKAGE_NCURSES_TARGET_MENU=y
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
 BR2_PACKAGE_POPT=y
