--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00038-gd099d25 Configuration
+# Buildroot 2013.05-00054-gcc793bb Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1224,7 +1224,7 @@ BR2_PACKAGE_DHCP_CLIENT=y
 # BR2_PACKAGE_DNSMASQ is not set
 # BR2_PACKAGE_DROPBEAR is not set
 # BR2_PACKAGE_EBTABLES is not set
-# BR2_PACKAGE_ETHTOOL is not set
+BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_GUPNP=y
 BR2_PACKAGE_GUPNP_AV=y
 # BR2_PACKAGE_GUPNP_IGD is not set
