stream-decoder: adjust for the renamed gst-libav package

--- a/package/raumfeld/stream-decoder/Config.in
+++ b/package/raumfeld/stream-decoder/Config.in
@@ -1,10 +1,10 @@
 config BR2_PACKAGE_STREAM_DECODER
 	bool "stream-decoder"
 	select BR2_INSTALL_LIBSTDCPP
-	select BR2_PACKAGE_GSTREAMER
-	select BR2_PACKAGE_GST_PLUGINS_GOOD
-	select BR2_PACKAGE_GST_PLUGINS_UGLY
-        select BR2_PACKAGE_GST_LIBAV
+	select BR2_PACKAGE_GSTREAMER1
+	select BR2_PACKAGE_GST1_PLUGINS_GOOD
+	select BR2_PACKAGE_GST1_PLUGINS_UGLY
+        select BR2_PACKAGE_GST1_LIBAV
 	select BR2_PACKAGE_LIBSOUP
         select BR2_PACKAGE_RAUMFELD_REPOSITORY
 	help
