raumfeld: remove legacy buildroot options
Followup fix for RFS-4148

--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-02817-gc37caff-dirty Configuration
+# Buildroot 2013.11-rc2-02855-g3b22373-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1631,126 +1631,9 @@ BR2_PACKAGE_HOST_GENEXT2FS=y
 # BR2_PACKAGE_HOST_SAM_BA is not set
 # BR2_PACKAGE_HOST_SUNXI_TOOLS is not set
 # BR2_PACKAGE_HOST_UBOOT_TOOLS is not set
-BR2_LEGACY=y
-
-#
-# Legacy detected: check the content of the menu below
-#
 
 #
 # Legacy config options
-#
-
-#
-# ----------------------------------------------------
-#
-
-#
-# Your old configuration uses legacy options that no  
-#
-
-#
-# longer exist in buildroot, as indicated in the menu 
-#
-
-#
-# below. As long as these options stay selected, or in
-#
-
-#
-# case of string options are non-empty, the build     
-#
-
-#
-# will fail.                                          
-#
-
-#
-# *                                                   
-#
-
-#
-# Where possible, an automatic conversion from old to 
-#
-
-#
-# new symbols has been performed. Before making any   
-#
-
-#
-# change in this legacy menu, make sure to exit the   
-#
-
-#
-# configuration editor a first time and save the      
-#
-
-#
-# configuration. Otherwise, the automatic conversion  
-#
-
-#
-# of symbols will be lost.                            
-#
-
-#
-# *                                                   
-#
-
-#
-# After this initial save, reopen the configuration   
-#
-
-#
-# editor, inspect the options selected below, read    
-#
-
-#
-# their help texts, and verify/update the new         
-#
-
-#
-# configuration in the corresponding configuration    
-#
-
-#
-# menus. When everything is ok, you can disable the   
-#
-
-#
-# legacy options in the menu below. Once you have     
-#
-
-#
-# disabled all legacy options, this text will         
-#
-
-#
-# disappear and you will be able to start the build.  
-#
-
-#
-# *                                                   
-#
-
-#
-# Note: at some point in the future, the oldest legacy
-#
-
-#
-# options will be removed, and configuration files    
-#
-
-#
-# that still have those options set, will fail to     
-#
-
-#
-# build, or run, in unpredictable ways.               
-#
-
-#
-# ----------------------------------------------------
 #
 
 #
@@ -1760,10 +1643,8 @@ BR2_LEGACY=y
 # BR2_PACKAGE_MODULE_INIT_TOOLS is not set
 BR2_TARGET_UBOOT_CUSTOM_GIT_REPO_URL=""
 BR2_TARGET_UBOOT_CUSTOM_GIT_VERSION=""
-BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="ssh://git@sources.teufelhome.com/rfs/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL_WRAP=y
-BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="80c638dde87"
-BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION_WRAP=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL=""
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION=""
 
 #
 # Legacy options removed in 2013.08
