--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-02817-gc37caff-dirty Configuration
+# Buildroot 2013.11-rc2-00008-g7539da4-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1327,6 +1327,8 @@ BR2_PACKAGE_NCURSES=y
 BR2_PACKAGE_PCRE=y
 # BR2_PACKAGE_PCRE_16 is not set
 # BR2_PACKAGE_PCRE_32 is not set
+BR2_PACKAGE_PCRE_UTF=y
+BR2_PACKAGE_PCRE_UCP=y
 BR2_PACKAGE_POPT=y
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
