iso-codes: fix gettext dependency
Signed-off-by: Sven Neumann <neumann@teufel.de>

--- a/package/iso-codes/Config.in
+++ b/package/iso-codes/Config.in
@@ -1,6 +1,6 @@
 config BR2_ISO_CODES
 	bool "iso-codes"
-	select BR2_PACKAGE_GETTEXT
+	select BR2_PACKAGE_GETTEXT if BR2_NEEDS_GETTEXT
 	help
 	  The iso-codes package provides lists of various ISO standards
 	  (e.g. country, language, language scripts, and currency names).
