--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -345,7 +345,7 @@ BR2_PACKAGE_FLAC=y
 # BR2_PACKAGE_GSTREAMER is not set
 BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GSTREAMER1_PARSE=y
-BR2_PACKAGE_GSTREAMER1_TRACE=y
+# BR2_PACKAGE_GSTREAMER1_TRACE is not set
 # BR2_PACKAGE_GSTREAMER1_GST_DEBUG is not set
 BR2_PACKAGE_GSTREAMER1_PLUGIN_REGISTRY=y
 BR2_PACKAGE_GSTREAMER1_INSTALL_TOOLS=y
