raumfeld: change target CPU option to use NEON instead of VFPv3
Fixes RFS-4248

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-00008-g7539da4-dirty Configuration
+# Buildroot 2013.11-rc2-00016-g93bef0f Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -33,7 +33,7 @@ BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_TUNE="cortex-a8"
 BR2_GCC_TARGET_ARCH="armv7-a"
 BR2_GCC_TARGET_ABI="aapcs-linux"
-BR2_GCC_TARGET_FPU="vfpv3"
+BR2_GCC_TARGET_FPU="neon"
 BR2_GCC_TARGET_FLOAT_ABI="softfp"
 BR2_GCC_TARGET_MODE="arm"
 BR2_ARM_CPU_HAS_NEON=y
@@ -65,9 +65,9 @@ BR2_ARM_EABI=y
 # BR2_ARM_EABIHF is not set
 # BR2_ARM_SOFT_FLOAT is not set
 # BR2_ARM_FPU_VFPV2 is not set
-BR2_ARM_FPU_VFPV3=y
+# BR2_ARM_FPU_VFPV3 is not set
 # BR2_ARM_FPU_VFPV3D16 is not set
-# BR2_ARM_FPU_NEON is not set
+BR2_ARM_FPU_NEON=y
 BR2_ARM_INSTRUCTIONS_ARM_CHOICE=y
 # BR2_ARM_INSTRUCTIONS_THUMB2 is not set
 BR2_ARM_INSTRUCTIONS_ARM=y
@@ -200,7 +200,7 @@ BR2_GCC_VERSION_4_7_X=y
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
 BR2_GCC_VERSION="4.7.3"
-BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-fpu=vfpv3 --with-float=hard"
+BR2_EXTRA_GCC_CONFIG_OPTIONS=""
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_TLS=y
 # BR2_GCC_ENABLE_OPENMP is not set
