--- a/raumfeld/busybox.config
+++ b/raumfeld/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.20.2
-# Wed Aug 28 14:10:08 2013
+# Mon Nov 25 14:05:55 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -542,8 +542,8 @@ CONFIG_FEATURE_DMESG_PRETTY=y
 # CONFIG_FBSET is not set
 # CONFIG_FEATURE_FBSET_FANCY is not set
 # CONFIG_FEATURE_FBSET_READMODE is not set
-CONFIG_FDFLUSH=y
-CONFIG_FDFORMAT=y
+# CONFIG_FDFLUSH is not set
+# CONFIG_FDFORMAT is not set
 # CONFIG_FDISK is not set
 # CONFIG_FDISK_SUPPORT_LARGE_DISKS is not set
 # CONFIG_FEATURE_FDISK_WRITABLE is not set
@@ -555,9 +555,9 @@ CONFIG_FDFORMAT=y
 # CONFIG_FEATURE_FDISK_ADVANCED is not set
 # CONFIG_FINDFS is not set
 # CONFIG_FLOCK is not set
-CONFIG_FREERAMDISK=y
+# CONFIG_FREERAMDISK is not set
 # CONFIG_FSCK_MINIX is not set
-CONFIG_MKFS_EXT2=y
+# CONFIG_MKFS_EXT2 is not set
 # CONFIG_MKFS_MINIX is not set
 # CONFIG_FEATURE_MINIX2 is not set
 # CONFIG_MKFS_REISER is not set
@@ -567,15 +567,15 @@ CONFIG_FEATURE_GETOPT_LONG=y
 CONFIG_HEXDUMP=y
 # CONFIG_FEATURE_HEXDUMP_REVERSE is not set
 # CONFIG_HD is not set
-CONFIG_HWCLOCK=y
-CONFIG_FEATURE_HWCLOCK_LONG_OPTIONS=y
-CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS=y
-CONFIG_IPCRM=y
-CONFIG_IPCS=y
+# CONFIG_HWCLOCK is not set
+# CONFIG_FEATURE_HWCLOCK_LONG_OPTIONS is not set
+# CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS is not set
+# CONFIG_IPCRM is not set
+# CONFIG_IPCS is not set
 CONFIG_LOSETUP=y
 CONFIG_LSPCI=y
 CONFIG_LSUSB=y
-CONFIG_MKSWAP=y
+# CONFIG_MKSWAP is not set
 # CONFIG_FEATURE_MKSWAP_UUID is not set
 CONFIG_MORE=y
 CONFIG_MOUNT=y
@@ -587,15 +587,15 @@ CONFIG_FEATURE_MOUNT_HELPERS=y
 # CONFIG_FEATURE_MOUNT_CIFS is not set
 CONFIG_FEATURE_MOUNT_FLAGS=y
 CONFIG_FEATURE_MOUNT_FSTAB=y
-CONFIG_PIVOT_ROOT=y
-CONFIG_RDATE=y
+# CONFIG_PIVOT_ROOT is not set
+# CONFIG_RDATE is not set
 # CONFIG_RDEV is not set
 CONFIG_READPROFILE=y
 # CONFIG_RTCWAKE is not set
 # CONFIG_SCRIPT is not set
 # CONFIG_SCRIPTREPLAY is not set
-CONFIG_SETARCH=y
-CONFIG_SWAPONOFF=y
+# CONFIG_SETARCH is not set
+# CONFIG_SWAPONOFF is not set
 # CONFIG_FEATURE_SWAPON_PRI is not set
 CONFIG_SWITCH_ROOT=y
 CONFIG_UMOUNT=y
