--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-02886-g9e83248-dirty Configuration
+# Buildroot 2013.11-rc3-00077-g453a013-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -145,7 +145,7 @@ BR2_TOOLCHAIN_BUILDROOT=y
 BR2_KERNEL_HEADERS_3_12=y
 # BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_SNAP is not set
-BR2_DEFAULT_KERNEL_HEADERS="3.12"
+BR2_DEFAULT_KERNEL_HEADERS="3.12.1"
 BR2_TOOLCHAIN_BUILDROOT_UCLIBC=y
 # BR2_TOOLCHAIN_BUILDROOT_EGLIBC is not set
 # BR2_TOOLCHAIN_BUILDROOT_GLIBC is not set
@@ -1122,7 +1122,7 @@ BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_NEON is not set
 
 #
-# omniORB needs a toolchain w/ C++
+# omniORB needs a toolchain w/ C++, threads
 #
 # BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
