--- a/raumfeld/br2-initramfs-arm.config
+++ b/raumfeld/br2-initramfs-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-02886-g9e83248-dirty Configuration
+# Buildroot 2013.11-rc3-00077-g453a013 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1025,7 +1025,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_NEON is not set
 
 #
-# omniORB needs a toolchain w/ C++
+# omniORB needs a toolchain w/ C++, threads
 #
 # BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
