--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc2-02886-g9e83248-dirty Configuration
+# Buildroot 2013.11-rc3-00077-g453a013-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1133,7 +1133,7 @@ BR2_PACKAGE_LIBSOUP=y
 #
 
 #
-# omniORB needs a toolchain w/ C++
+# omniORB needs a toolchain w/ C++, threads
 #
 # BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
