--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-rc3-00077-g453a013-dirty Configuration
+# Buildroot 2013.11-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1152,6 +1152,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_LIBGLIB2 is not set
 # BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
+BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBNSPR is not set
 # BR2_PACKAGE_LIBPFM4 is not set
 # BR2_PACKAGE_LIBPTHSEM is not set
@@ -1572,6 +1573,7 @@ BR2_TARGET_ROOTFS_INITRAMFS=y
 #
 # Legacy options removed in 2013.11
 #
+# BR2_PACKAGE_LVM2_DMSETUP_ONLY is not set
 # BR2_PACKAGE_QT_JAVASCRIPTCORE is not set
 # BR2_PACKAGE_MODULE_INIT_TOOLS is not set
 BR2_TARGET_UBOOT_CUSTOM_GIT_REPO_URL=""
