raumfeld: update Geode kernel to 3.12.4 (RFS-4313)

--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-dirty Configuration
+# Buildroot 2013.11-00005-g29fb825 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -264,8 +264,8 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
 # BR2_LINUX_KERNEL_CUSTOM_GIT is not set
 # BR2_LINUX_KERNEL_CUSTOM_HG is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.12"
-BR2_LINUX_KERNEL_VERSION="3.12"
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.12.4"
+BR2_LINUX_KERNEL_VERSION="3.12.4"
 BR2_LINUX_KERNEL_PATCH="raumfeld/kernel-geode.patch"
 BR2_LINUX_KERNEL_FIRMWARE=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
