raumfeld: switch from uClibc to glibc
Fixes RFS-4250

--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-dirty Configuration
+# Buildroot 2013.11-00022-g88d86c1-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -111,10 +111,7 @@ BR2_STRIP_EXCLUDE_DIRS=""
 BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_S is not set
-
-#
-# enabling Stack Smashing Protection requires support in the toolchain
-#
+# BR2_ENABLE_SSP is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
 BR2_GLOBAL_PATCH_DIR=""
@@ -122,7 +119,7 @@ BR2_GLOBAL_PATCH_DIR=""
 #
 # Toolchain
 #
-BR2_TOOLCHAIN_USES_UCLIBC=y
+BR2_TOOLCHAIN_USES_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
 
@@ -139,35 +136,17 @@ BR2_KERNEL_HEADERS_VERSION=y
 # BR2_KERNEL_HEADERS_SNAP is not set
 BR2_DEFAULT_KERNEL_VERSION="3.0.4"
 BR2_DEFAULT_KERNEL_HEADERS="3.0.4"
-BR2_TOOLCHAIN_BUILDROOT_UCLIBC=y
+# BR2_TOOLCHAIN_BUILDROOT_UCLIBC is not set
 # BR2_TOOLCHAIN_BUILDROOT_EGLIBC is not set
-# BR2_TOOLCHAIN_BUILDROOT_GLIBC is not set
-BR2_TOOLCHAIN_BUILDROOT_LIBC="uclibc"
-
-#
-# uClibc Options
-#
-BR2_UCLIBC_VERSION_0_9_32=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
+# BR2_UCLIBC_VERSION_0_9_32 is not set
 # BR2_UCLIBC_VERSION_0_9_33 is not set
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
-BR2_UCLIBC_VERSION_STRING="0.9.32.1"
-BR2_UCLIBC_CONFIG="package/uclibc/uClibc-0.9.32.config"
-BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
-# BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
-BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
-BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
-BR2_PTHREADS_NATIVE=y
-BR2_PTHREAD_DEBUG=y
-# BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
-BR2_UCLIBC_INSTALL_UTILS=y
-# BR2_UCLIBC_INSTALL_TEST_SUITE is not set
-BR2_UCLIBC_TARGET_ARCH="arm"
-BR2_UCLIBC_ARM_TYPE="ARM_XSCALE"
-BR2_UCLIBC_ARM_BX=y
+# BR2_PTHREADS_NATIVE is not set
 
 #
 # Binutils Options
@@ -203,16 +182,16 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
+BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
+BR2_TOOLCHAIN_HAS_SSP=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C de en nl"
 BR2_GENERATE_LOCALE="en_US de_DE nl_NL"
-BR2_NEEDS_GETTEXT=y
-BR2_NEEDS_GETTEXT_IF_LOCALE=y
 BR2_USE_MMU=y
 BR2_TARGET_OPTIMIZATION="-pipe -funwind-tables"
 BR2_TARGET_LDFLAGS=""
@@ -373,10 +352,7 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-
-#
-# ltp-testsuite needs a toolchain w/ IPv6, RPC, largefile, threads
-#
+# BR2_PACKAGE_LTP_TESTSUITE is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_LTTNG_MODULES is not set
 # BR2_PACKAGE_LTTNG_TOOLS is not set
@@ -412,8 +388,6 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_FINDUTILS is not set
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
-BR2_PACKAGE_GETTEXT=y
-# BR2_PACKAGE_GETTEXT_TOOLS is not set
 # BR2_PACKAGE_GIT is not set
 
 #
@@ -662,10 +636,7 @@ BR2_DBUS_LIBXML2=y
 #
 # BR2_PACKAGE_IMX_LIB is not set
 # BR2_PACKAGE_FIRMWARE_IMX is not set
-
-#
-# gpu-viv-bin-mx6q needs an (e)glibc toolchain
-#
+# BR2_PACKAGE_GPU_VIV_BIN_MX6Q is not set
 # BR2_PACKAGE_FXLOAD is not set
 # BR2_PACKAGE_GADGETFS_TEST is not set
 # BR2_PACKAGE_GPSD is not set
@@ -728,19 +699,10 @@ BR2_PACKAGE_GVFS=y
 # BR2_PACKAGE_SNOWBALL_HDMISERVICE is not set
 # BR2_PACKAGE_SREDIRD is not set
 # BR2_PACKAGE_STATSERIAL is not set
-
-#
-# sunxi-cedarx needs an (e)glibc toolchain
-#
-
-#
-# sunxi-mali needs an (e)glibc toolchain
-#
+# BR2_PACKAGE_SUNXI_CEDARX is not set
+# BR2_PACKAGE_SUNXI_MALI is not set
 # BR2_PACKAGE_SYSSTAT is not set
-
-#
-# ti-gfx needs an (e)glibc toolchain and the linux kernel
-#
+# BR2_PACKAGE_TI_GFX is not set
 # BR2_PACKAGE_TI_UTILS is not set
 BR2_PACKAGE_UBOOT_TOOLS=y
 # BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE is not set
@@ -1127,10 +1089,7 @@ BR2_PACKAGE_LIBSOUP=y
 # BR2_PACKAGE_LIBVNCSERVER is not set
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
 # BR2_PACKAGE_NEON is not set
-
-#
-# nss-mdns needs an (e)glibc toolchain
-#
+# BR2_PACKAGE_NSS_MDNS is not set
 
 #
 # omniORB needs a toolchain w/ C++, threads
@@ -1184,7 +1143,7 @@ BR2_PACKAGE_LIBSOUP=y
 # BR2_PACKAGE_GMP is not set
 
 #
-# google-breakpad requires a toolchain with C++ and context control functions
+# google-breakpad requires an (e)glibc toolchain with C++
 #
 # BR2_PACKAGE_GSL is not set
 
@@ -1252,6 +1211,7 @@ BR2_PACKAGE_LIBUNWIND=y
 #
 # schifra needs a toolchain w/ C++
 #
+# BR2_PACKAGE_TZDATA is not set
 
 #
 # Security
@@ -1322,10 +1282,7 @@ BR2_PACKAGE_AVAHI_DAEMON=y
 # BR2_PACKAGE_CAN_UTILS is not set
 # BR2_PACKAGE_CHRONY is not set
 # BR2_PACKAGE_CIVETWEB is not set
-
-#
-# connman needs a toolchain w/ IPv6, wchar, threads, resolver
-#
+# BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 
@@ -1416,10 +1373,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
-
-#
-# portmap needs a toolchain w/ RPC
-#
+# BR2_PACKAGE_PORTMAP is not set
 # BR2_PACKAGE_PPPD is not set
 # BR2_PACKAGE_PPTP_LINUX is not set
 # BR2_PACKAGE_PROFTPD is not set
