--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00005-g29fb825 Configuration
+# Buildroot 2013.11-00022-g88d86c1-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -107,10 +107,7 @@ BR2_STRIP_EXCLUDE_DIRS=""
 BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_S is not set
-
-#
-# enabling Stack Smashing Protection requires support in the toolchain
-#
+# BR2_ENABLE_SSP is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
 BR2_GLOBAL_PATCH_DIR=""
@@ -118,7 +115,7 @@ BR2_GLOBAL_PATCH_DIR=""
 #
 # Toolchain
 #
-BR2_TOOLCHAIN_USES_UCLIBC=y
+BR2_TOOLCHAIN_USES_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
 
@@ -133,34 +130,18 @@ BR2_TOOLCHAIN_BUILDROOT=y
 BR2_KERNEL_HEADERS_3_12=y
 # BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_SNAP is not set
-BR2_DEFAULT_KERNEL_HEADERS="3.12.7"
-BR2_TOOLCHAIN_BUILDROOT_UCLIBC=y
+BR2_DEFAULT_KERNEL_HEADERS="3.12.1"
+# BR2_TOOLCHAIN_BUILDROOT_UCLIBC is not set
 # BR2_TOOLCHAIN_BUILDROOT_EGLIBC is not set
-# BR2_TOOLCHAIN_BUILDROOT_GLIBC is not set
-BR2_TOOLCHAIN_BUILDROOT_LIBC="uclibc"
-
-#
-# uClibc Options
-#
-BR2_UCLIBC_VERSION_0_9_32=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
+# BR2_UCLIBC_VERSION_0_9_32 is not set
 # BR2_UCLIBC_VERSION_0_9_33 is not set
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
-BR2_UCLIBC_VERSION_STRING="0.9.32.1"
-BR2_UCLIBC_CONFIG="package/uclibc/uClibc-0.9.32.config"
-BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
-# BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
-BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
-BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
-BR2_PTHREADS_NATIVE=y
-BR2_PTHREAD_DEBUG=y
-# BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
-BR2_UCLIBC_INSTALL_UTILS=y
-# BR2_UCLIBC_INSTALL_TEST_SUITE is not set
-BR2_UCLIBC_TARGET_ARCH="i386"
+# BR2_PTHREADS_NATIVE is not set
 
 #
 # Binutils Options
@@ -195,17 +176,17 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
+BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
 BR2_ENABLE_LOCALE=y
 BR2_INSTALL_LIBSTDCPP=y
 BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
+BR2_TOOLCHAIN_HAS_SSP=y
 BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en"
 BR2_GENERATE_LOCALE="en_US de_DE nl_NL"
-BR2_NEEDS_GETTEXT=y
-BR2_NEEDS_GETTEXT_IF_LOCALE=y
 BR2_USE_MMU=y
 BR2_TARGET_OPTIMIZATION="-pipe -funwind-tables"
 BR2_TARGET_LDFLAGS=""
@@ -349,10 +330,7 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-
-#
-# ltp-testsuite needs a toolchain w/ IPv6, RPC, largefile, threads
-#
+# BR2_PACKAGE_LTP_TESTSUITE is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_LTTNG_MODULES is not set
 # BR2_PACKAGE_LTTNG_TOOLS is not set
@@ -387,8 +365,6 @@ BR2_PACKAGE_KEXEC_ZLIB=y
 # BR2_PACKAGE_FINDUTILS is not set
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
-BR2_PACKAGE_GETTEXT=y
-# BR2_PACKAGE_GETTEXT_TOOLS is not set
 # BR2_PACKAGE_GIT is not set
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
@@ -874,10 +850,7 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_LIBVNCSERVER is not set
 # BR2_PACKAGE_LIBWEBSOCKETS is not set
 # BR2_PACKAGE_NEON is not set
-
-#
-# nss-mdns needs an (e)glibc toolchain
-#
+# BR2_PACKAGE_NSS_MDNS is not set
 # BR2_PACKAGE_OMNIORB is not set
 # BR2_PACKAGE_OPENPGM is not set
 # BR2_PACKAGE_ORTP is not set
@@ -896,19 +869,13 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_APR_UTIL is not set
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 # BR2_PACKAGE_BOOST is not set
-
-#
-# cppcms needs an (e)glibc toolchain w/ C++
-#
+# BR2_PACKAGE_CPPCMS is not set
 # BR2_PACKAGE_EIGEN is not set
 # BR2_PACKAGE_ELFUTILS is not set
 # BR2_PACKAGE_FFTW is not set
 # BR2_PACKAGE_GLIBMM is not set
 BR2_PACKAGE_GMP=y
-
-#
-# google-breakpad requires a toolchain with C++ and context control functions
-#
+# BR2_PACKAGE_GOOGLE_BREAKPAD is not set
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBARGTABLE2 is not set
@@ -916,10 +883,7 @@ BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_LIBBSD is not set
 # BR2_PACKAGE_LIBCAP is not set
 # BR2_PACKAGE_LIBCAP_NG is not set
-
-#
-# libcgroup needs an (e)glibc toolchain w/ C++
-#
+# BR2_PACKAGE_LIBCGROUP is not set
 BR2_PACKAGE_LIBDAEMON=y
 # BR2_PACKAGE_LIBELF is not set
 # BR2_PACKAGE_LIBEV is not set
@@ -952,6 +916,7 @@ BR2_PACKAGE_LIBUNWIND=y
 # BR2_PACKAGE_PROTOBUF is not set
 # BR2_PACKAGE_PROTOBUF_C is not set
 # BR2_PACKAGE_SCHIFRA is not set
+# BR2_PACKAGE_TZDATA is not set
 
 #
 # Security
@@ -1020,10 +985,7 @@ BR2_PACKAGE_BRIDGE_UTILS=y
 # BR2_PACKAGE_CAN_UTILS is not set
 # BR2_PACKAGE_CHRONY is not set
 # BR2_PACKAGE_CIVETWEB is not set
-
-#
-# connman needs a toolchain w/ IPv6, wchar, threads, resolver
-#
+# BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 # BR2_PACKAGE_CTORRENT is not set
@@ -1073,6 +1035,7 @@ BR2_PACKAGE_IW=y
 # BR2_PACKAGE_MII_DIAG is not set
 # BR2_PACKAGE_MINIDLNA is not set
 # BR2_PACKAGE_MONGOOSE is not set
+# BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
 # BR2_PACKAGE_MSMTP is not set
 # BR2_PACKAGE_MUTT is not set
@@ -1099,10 +1062,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
-
-#
-# portmap needs a toolchain w/ RPC
-#
+# BR2_PACKAGE_PORTMAP is not set
 # BR2_PACKAGE_PPPD is not set
 # BR2_PACKAGE_PPTP_LINUX is not set
 # BR2_PACKAGE_PROFTPD is not set
