--- a/raumfeld/br2-initramfs-geode.config
+++ b/raumfeld/br2-initramfs-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-dirty Configuration
+# Buildroot 2013.11-00022-g88d86c1-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -107,10 +107,7 @@ BR2_STRIP_EXCLUDE_DIRS=""
 BR2_OPTIMIZE_2=y
 # BR2_OPTIMIZE_3 is not set
 # BR2_OPTIMIZE_S is not set
-
-#
-# enabling Stack Smashing Protection requires support in the toolchain
-#
+# BR2_ENABLE_SSP is not set
 # BR2_PREFER_STATIC_LIB is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/local.mk"
 BR2_GLOBAL_PATCH_DIR=""
@@ -118,7 +115,7 @@ BR2_GLOBAL_PATCH_DIR=""
 #
 # Toolchain
 #
-BR2_TOOLCHAIN_USES_UCLIBC=y
+BR2_TOOLCHAIN_USES_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_TOOLCHAIN_EXTERNAL is not set
 
@@ -133,34 +130,18 @@ BR2_TOOLCHAIN_BUILDROOT=y
 BR2_KERNEL_HEADERS_3_12=y
 # BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_SNAP is not set
-BR2_DEFAULT_KERNEL_HEADERS="3.12.7"
-BR2_TOOLCHAIN_BUILDROOT_UCLIBC=y
+BR2_DEFAULT_KERNEL_HEADERS="3.12.1"
+# BR2_TOOLCHAIN_BUILDROOT_UCLIBC is not set
 # BR2_TOOLCHAIN_BUILDROOT_EGLIBC is not set
-# BR2_TOOLCHAIN_BUILDROOT_GLIBC is not set
-BR2_TOOLCHAIN_BUILDROOT_LIBC="uclibc"
-
-#
-# uClibc Options
-#
-BR2_UCLIBC_VERSION_0_9_32=y
+BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
+# BR2_UCLIBC_VERSION_0_9_32 is not set
 # BR2_UCLIBC_VERSION_0_9_33 is not set
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
-BR2_UCLIBC_VERSION_STRING="0.9.32.1"
-BR2_UCLIBC_CONFIG="package/uclibc/uClibc-0.9.32.config"
-BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
-BR2_TOOLCHAIN_BUILDROOT_INET_IPV6=y
-# BR2_TOOLCHAIN_BUILDROOT_INET_RPC is not set
-BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
-# BR2_TOOLCHAIN_BUILDROOT_LOCALE is not set
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
-BR2_PTHREADS_NATIVE=y
-# BR2_PTHREAD_DEBUG is not set
-# BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
-BR2_UCLIBC_INSTALL_UTILS=y
-# BR2_UCLIBC_INSTALL_TEST_SUITE is not set
-BR2_UCLIBC_TARGET_ARCH="i386"
+# BR2_PTHREADS_NATIVE is not set
 
 #
 # Binutils Options
@@ -195,12 +176,15 @@ BR2_GCC_ENABLE_TLS=y
 # BR2_PACKAGE_HOST_GDB is not set
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
+BR2_TOOLCHAIN_HAS_NATIVE_RPC=y
 BR2_USE_WCHAR=y
+BR2_ENABLE_LOCALE=y
 BR2_TOOLCHAIN_HAS_THREADS=y
+BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
+BR2_TOOLCHAIN_HAS_SSP=y
 # BR2_ENABLE_LOCALE_PURGE is not set
 BR2_GENERATE_LOCALE=""
-BR2_NEEDS_GETTEXT=y
 BR2_USE_MMU=y
 BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_TARGET_LDFLAGS=""
@@ -349,19 +333,13 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 #
 # duma needs a toolchain w/ C++, threads
 #
-
-#
-# gdb/gdbserver needs a toolchain w/ threads, threads debug
-#
+# BR2_PACKAGE_GDB is not set
 # BR2_PACKAGE_IOZONE is not set
 # BR2_PACKAGE_KEXEC is not set
 # BR2_PACKAGE_LATENCYTOP is not set
 # BR2_PACKAGE_LMBENCH is not set
 # BR2_PACKAGE_LSOF is not set
-
-#
-# ltp-testsuite needs a toolchain w/ IPv6, RPC, largefile, threads
-#
+# BR2_PACKAGE_LTP_TESTSUITE is not set
 # BR2_PACKAGE_LTRACE is not set
 # BR2_PACKAGE_LTTNG_MODULES is not set
 # BR2_PACKAGE_LTTNG_TOOLS is not set
@@ -398,7 +376,6 @@ BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_FINDUTILS is not set
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
-# BR2_PACKAGE_GETTEXT is not set
 # BR2_PACKAGE_GIT is not set
 
 #
@@ -1032,7 +1009,7 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_GMP is not set
 
 #
-# google-breakpad requires a toolchain with C++ and context control functions
+# google-breakpad requires an (e)glibc toolchain with C++
 #
 # BR2_PACKAGE_GSL is not set
 
@@ -1070,10 +1047,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LIBTPL is not set
 # BR2_PACKAGE_LIBUNWIND is not set
 # BR2_PACKAGE_LIBURCU is not set
-
-#
-# linux-pam needs a toolchain w/ wchar, locale
-#
+# BR2_PACKAGE_LINUX_PAM is not set
 
 #
 # log4cxx needs a toolchain w/ C++, threads, dynamic library
@@ -1104,6 +1078,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # schifra needs a toolchain w/ C++
 #
+# BR2_PACKAGE_TZDATA is not set
 
 #
 # Security
@@ -1171,10 +1146,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_CAN_UTILS is not set
 # BR2_PACKAGE_CHRONY is not set
 # BR2_PACKAGE_CIVETWEB is not set
-
-#
-# connman needs a toolchain w/ IPv6, wchar, threads, resolver
-#
+# BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 
@@ -1259,10 +1231,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
-
-#
-# portmap needs a toolchain w/ RPC
-#
+# BR2_PACKAGE_PORTMAP is not set
 # BR2_PACKAGE_PPPD is not set
 # BR2_PACKAGE_PPTP_LINUX is not set
 # BR2_PACKAGE_PROFTPD is not set
