--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00022-gdd6d3a9-dirty Configuration
+# Buildroot 2013.11-00024-gec9685a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
