--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00022-g88d86c1-dirty Configuration
+# Buildroot 2013.11-00024-gec9685a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1216,7 +1216,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # BR2_PACKAGE_LIBEDIT is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
-BR2_PACKAGE_LIBICONV=y
+# BR2_PACKAGE_LIBICONV is not set
 # BR2_PACKAGE_LINENOISE is not set
 BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
