--- a/raumfeld/br2-imgrootfs-geode.config
+++ b/raumfeld/br2-imgrootfs-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00022-g88d86c1-dirty Configuration
+# Buildroot 2013.11-00024-gec9685a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -135,13 +135,6 @@ BR2_DEFAULT_KERNEL_HEADERS="3.12.1"
 # BR2_TOOLCHAIN_BUILDROOT_EGLIBC is not set
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_TOOLCHAIN_BUILDROOT_LIBC="glibc"
-# BR2_UCLIBC_VERSION_0_9_32 is not set
-# BR2_UCLIBC_VERSION_0_9_33 is not set
-# BR2_UCLIBC_VERSION_SNAPSHOT is not set
-# BR2_PTHREADS_NONE is not set
-# BR2_PTHREADS is not set
-# BR2_PTHREADS_OLD is not set
-# BR2_PTHREADS_NATIVE is not set
 
 #
 # Binutils Options
@@ -1104,7 +1097,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 #
 # BR2_PACKAGE_LIBEDIT is not set
 # BR2_PACKAGE_LIBFRIBIDI is not set
-BR2_PACKAGE_LIBICONV=y
+# BR2_PACKAGE_LIBICONV is not set
 # BR2_PACKAGE_LINENOISE is not set
 BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
