raumfeld: clean up initramfs targets
Reduce the size of the kernel with initramfs in an attempt
to fix the issues that shows up with RFS-4250.

--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00024-gec9685a-dirty Configuration
+# Buildroot 2013.11-00001-g5c2ad47-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -188,7 +188,8 @@ BR2_TOOLCHAIN_HAS_THREADS=y
 BR2_TOOLCHAIN_HAS_THREADS_DEBUG=y
 BR2_TOOLCHAIN_HAS_SHADOW_PASSWORDS=y
 BR2_TOOLCHAIN_HAS_SSP=y
-# BR2_ENABLE_LOCALE_PURGE is not set
+BR2_ENABLE_LOCALE_PURGE=y
+BR2_ENABLE_LOCALE_WHITELIST=""
 BR2_GENERATE_LOCALE=""
 BR2_USE_MMU=y
 BR2_TARGET_OPTIMIZATION="-pipe"
@@ -654,10 +655,7 @@ BR2_PACKAGE_MTD_NANDWRITE=y
 # BR2_PACKAGE_SYSSTAT is not set
 # BR2_PACKAGE_TI_GFX is not set
 # BR2_PACKAGE_TI_UTILS is not set
-BR2_PACKAGE_UBOOT_TOOLS=y
-# BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE is not set
-# BR2_PACKAGE_UBOOT_TOOLS_MKENVIMAGE is not set
-BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
+# BR2_PACKAGE_UBOOT_TOOLS is not set
 
 #
 # udev requires /dev mgmnt set to udev under System configuration
