raumfeld: unselect util-linux in initramfs targets
Part of the initramfs cleanup for RFS-4250

--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00001-g5c2ad47-dirty Configuration
+# Buildroot 2013.11-00005-g31bf5f5 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1427,11 +1427,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # systemd needs udev /dev management and a toolchain w/ IPv6, threads
 #
 # BR2_PACKAGE_SYSVINIT is not set
-BR2_PACKAGE_UTIL_LINUX=y
-BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
-# BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
-BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
-# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
+# BR2_PACKAGE_UTIL_LINUX is not set
 
 #
 # Text editors and viewers
