raumfeld: select the fixed-point implementation of opus
Configured this way the code can make use of the NEON extension.

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00026-g49e8d78 Configuration
+# Buildroot 2013.11-00035-gadbe403-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -955,6 +955,7 @@ BR2_PACKAGE_LIBID3TAG=y
 # BR2_PACKAGE_LIBSNDFILE is not set
 BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_OPUS=y
+BR2_PACKAGE_OPUS_FIXED_POINT=y
 # BR2_PACKAGE_PORTAUDIO is not set
 # BR2_PACKAGE_SPEEX is not set
 BR2_PACKAGE_TAGLIB=y
