raumfeld: re-select run-parts in the busybox config
Without this utility the Base won't bring up the loopback
interface.

Fixup for the busybox cleanup done with RFS-4250

--- a/raumfeld/busybox.config
+++ b/raumfeld/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.21.1
-# Fri Jan 31 09:49:46 2014
+# Wed Feb  5 10:31:25 2014
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -352,7 +352,7 @@ CONFIG_SETLOGCONS=y
 #
 CONFIG_MKTEMP=y
 # CONFIG_PIPE_PROGRESS is not set
-# CONFIG_RUN_PARTS is not set
+CONFIG_RUN_PARTS=y
 # CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
 # CONFIG_FEATURE_RUN_PARTS_FANCY is not set
 CONFIG_START_STOP_DAEMON=y
