--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.11-00018-gf0a1671 Configuration
+# Buildroot 2013.11-00002-geda46c9-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -116,8 +116,8 @@ BR2_STRIP_EXCLUDE_FILES="libuClibc* libglib* libgio* libgobject* libsoup* libxml
 BR2_STRIP_EXCLUDE_DIRS=""
 # BR2_OPTIMIZE_0 is not set
 # BR2_OPTIMIZE_1 is not set
-BR2_OPTIMIZE_2=y
-# BR2_OPTIMIZE_3 is not set
+# BR2_OPTIMIZE_2 is not set
+BR2_OPTIMIZE_3=y
 # BR2_OPTIMIZE_S is not set
 # BR2_ENABLE_SSP is not set
 # BR2_PREFER_STATIC_LIB is not set
@@ -193,7 +193,7 @@ BR2_ENABLE_LOCALE_PURGE=y
 BR2_ENABLE_LOCALE_WHITELIST="C en"
 BR2_GENERATE_LOCALE="en_US de_DE nl_NL"
 BR2_USE_MMU=y
-BR2_TARGET_OPTIMIZATION="-pipe -funwind-tables"
+BR2_TARGET_OPTIMIZATION="-pipe -march=armv7-a -mtune=cortex-a8 -mfpu=neon -funwind-tables"
 BR2_TARGET_LDFLAGS=""
 # BR2_ECLIPSE_REGISTER is not set
 
